# kplot

./: README.md  bar.html  bar.html.md  core.html  heatmap.html  heatmap.html.md  hierarchical.html  hierarchical.html.md  index.html  index.html.md  pyproject.toml  ranking.html  ranking.html.md  robots.txt  scatter.html  scatter.html.md  search.json  sitemap.xml  utils.html  utils.html.md
kplot/: _modidx.py  bar.py  core.py  heatmap.py  hierarchical.py  metrics.py  plot.py  ranking.py  scatter.py  utils.py
kplot/plot/: bar.py  scatter.py
nbs/: 00_core.ipynb  01_utils.ipynb  02_scatter.ipynb  03_bar.ipynb  04_heatmap.ipynb  05_hierarchical.ipynb  05_metrics.ipynb  06_ranking.ipynb  _quarto.yml  custom.scss  index.ipynb  nbdev.yml  styles.css
site_libs/bootstrap/: bootstrap-f6b13f7683502e0b19782bc65b792124.min.css
