[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kplot"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "sky1ove", email = "lcai888666@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/sky1ove/kplot"
Documentation = "https://sky1ove.github.io/kplot/"

[project.entry-points.nbdev]
kplot = "kplot._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "kplot.__version__"}

[tool.setuptools.packages.find]
include = ["kplot"]

[tool.nbdev]
title = "kplot"
lib_path = "kplot" # this is the key