[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kplot"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "sky1ove", email = "lcai888666@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "adjusttext>=1.3.0",
    "cachetools>=7.0.5",
    "matplotlib>=3.10.8",
    "numba>=0.57",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statannotations>=0.7.2",
    "umap-learn>=0.5.5",
]

[project.urls]
Repository = "https://github.com/sky1ove/kplot"
Documentation = "https://sky1ove.github.io/kplot/"

[project.entry-points.nbdev]
kplot = "kplot._modidx:d"

[project.optional-dependencies]
dev = [
    "jupyter-copilot>=0.1.5",
    "jupyterlab>=4.5.3",
    "nbdev>=3.0.10",
]

[tool.setuptools.dynamic]
version = {attr = "kplot.__version__"}

[tool.setuptools.packages.find]
include = ["kplot"]

[tool.nbdev]
title = "kplot"
lib_path = "kplot"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter-client>=8.8.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
]
